[workspace]
members = [
    "kano",
    "kano-macros",
    "kano-html",
    "kano-svg",
    "kano-tui",
    "kano-web",
    "kano-basic-components",
    "examples/web-components-demo",
    "examples/demo",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
license = "MIT"
repository = "https://github.com/protojour/kano/"
