[package]
name = "autostrata-basic-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tui = ["autostrata/tui", "autostrata-tui"]
web = ["autostrata/web", "autostrata-web"]

[dependencies]
autostrata = { path = "../autostrata" }
autostrata-tui = { path = "../autostrata-tui", optional = true }
autostrata-web = { path = "../autostrata-web", optional = true }
