[package]
name = "autostrata-poc"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autostrata = { path = "../autostrata", features = ["dom"] }
autostrata-dom = { path = "../autostrata-dom" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
