[package]
name = "autostrata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dom = ["js-sys", "web-sys", "gloo", "wasm-bindgen-futures"]

[dependencies]
autostrata-macros.path = "../autostrata-macros"
web-sys = { version = "0.3", optional = true, features = ["Node"] }
js-sys = { version = "0.3", optional = true }
gloo = { version = "0.10", optional = true, features = ["events"] }
futures = "0.3"
wasm-bindgen-futures = { version = "0.4", optional = true }
# for DOM testing (remove later):
gloo-timers = { version = "0.3", features = ["futures"] }
