[package]
name = "kano-basic-components"
version = "0.0.1"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
publish = false

[features]
tui = ["kano/tui", "kano-tui"]
web = ["kano/web", "kano-web"]

[dependencies]
kano = { path = "../kano" }
kano-tui = { path = "../kano-tui", optional = true }
kano-web = { path = "../kano-web", optional = true }
