[package]
name = "kano-svg"
version.workspace = true
license = "MIT"
keywords = ["kano", "svg"]
description = "SVG elements and attributes for Kano"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
repository.workspace = true

[dependencies]
kano = { version = "0.0.1", path = "../kano" }
