[package]
name = "kano-tui"
version.workspace = true
license = "MIT"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
repository.workspace = true

[features]
web-component = []

[dependencies]
kano = { path = "../kano", features = ["tui"] }
anyhow = "1"
crossterm = "0.27.0"
ratatui = "0.24.0"
