[package]
name = "kano-tui"
version.workspace = true
license = "MIT"
description = "Kano is a graphical user interface framework which rethinks how cross-platform development works."
keywords = ["kano", "ui", "tui"]
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
repository.workspace = true

[features]
web-component = []

[dependencies]
kano = { version = "0.0.1", path = "../kano" }
anyhow = "1"
crossterm = "0.27.0"
ratatui = "0.24.0"
