[package]
name = "kano-web"
version.workspace = true
license = "MIT"
keywords = ["kano", "ui", "gui", "web", "wasm"]
description = "Kano is a graphical user interface framework which rethinks how cross-platform development works."
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
repository.workspace = true

[features]
web-component = []
routing = ["kano/routing", "web-sys/Location", "web-sys/History"]

[dependencies]
kano = { version = "0.0.1", path = "../kano" }
kano-html = { version = "0.0.1", path = "../kano-html" }
kano-svg = { version = "0.0.1", path = "../kano-svg" }
anyhow = "1"
futures = "0.3"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Node",
    "Text",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "Comment",
    "ShadowRoot",
]}
gloo = { version = "0.11", default-features = false, features = ["events"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
