[package]
name = "kano"
version.workspace = true
license = "MIT"
description = "Kano is a graphical user interface framework which rethinks how cross-platform development works."
keywords = ["kano", "ui", "gui"]
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
repository.workspace = true

[features]
tui = []
web = ["wasm-bindgen", "wasm-bindgen-futures"]

[dependencies]
kano-macros = { version = "0.0.1", path = "../kano-macros" }
anyhow = "1"
lazy_static = "1"
futures = "0.3"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
