[package]
name = "strata-uxr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
web = ["autostrata/web", "autostrata-web"]

[dependencies]
autostrata = { path = "../autostrata" }
autostrata-web = { path = "../autostrata-web", optional = true }
