[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
tui = ["kano-tui", "kano-basic-components/tui"]
web = ["kano-web", "kano-basic-components/web"]

[dependencies]
kano.path = "../../kano"
kano-tui = { path = "../../kano-tui", optional = true }
kano-web = { path = "../../kano-web", optional = true }
kano-basic-components = { path = "../../kano-basic-components" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
