[package]
name = "demo"
version.workspace = true
license = "MIT"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
publish = false

[features]
tui = ["kano-tui", "kano-basic-components/tui"]
web = ["kano-web", "kano-basic-components/web"]

[dependencies]
kano.path = "../../kano"
kano-tui = { path = "../../kano-tui", optional = true }
kano-web = { path = "../../kano-web", optional = true }
kano-basic-components = { path = "../../kano-basic-components" }
