[package]
name = "demo"
version.workspace = true
license = "MIT"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
publish = false

[binary]
doc = false

[features]
tui = ["kano-tui", "kano-basic-components/tui"]
web = ["kano-web", "kano-basic-components/web", "kano-basic-components/web-routing"]

[dependencies]
kano = { path = "../../kano", features = ["routing"] }
kano-tui = { path = "../../kano-tui", optional = true }
kano-web = { path = "../../kano-web", optional = true, features = ["routing"] }
kano-svg = { path = "../../kano-svg" }
kano-basic-components = { path = "../../kano-basic-components" }
