[package]
name = "web-components-demo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autostrata.path = "../../autostrata"
autostrata-web = { path = "../../autostrata-web", features = ["web-component"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
