[package]
name = "web-components-demo"
version.workspace = true
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
publish = false

[dependencies]
kano.path = "../../kano"
kano-web = { path = "../../kano-web", features = ["web-component"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
